# llm-fragments-gitlab

./: README.md  pyproject.toml
llm_fragments_gitlab/: __init__.py  loader.py
